--- a/app/src/main/res/layout/add_remove_cache_layout.xml
+++ b/app/src/main/res/layout/add_remove_cache_layout.xml
@@ -151,9 +151,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cache_winter_spinner_name"
-        android:layout_toRightOf="@id/cache_terrain_spinner"
-        android:layout_alignBaseline="@id/cache_terrain_spinner"
-        android:layout_alignLeft="@id/cache_size_spinner_name"/>
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/cache_terrain_spinner_name"
+        android:layout_marginTop="10dp"/>
     <Spinner
         android:id="@+id/cache_winter_spinner"
         android:layout_width="wrap_content"
@@ -166,7 +166,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1px"
         android:background="#000000"
-        android:layout_below="@id/cache_terrain_spinner_name"/>
+        android:layout_below="@id/cache_winter_spinner_name"/>
     <EditText
         android:id="@+id/cache_add_note"
         android:layout_width="fill_parent"
