--- a/app/src/main/res/layout/fragment_single_cache.xml
+++ b/app/src/main/res/layout/fragment_single_cache.xml
@@ -64,7 +64,8 @@
         android:layout_width="wrap_content"
         android:text="@string/single_cache_difficulty_name"
         android:textColor="#000000"
-        android:layout_below="@id/single_cache_e"/>
+        android:layout_below="@id/single_cache_e"
+        android:layout_marginTop="10dp"/>
     <TextView
         android:id="@+id/single_cache_difficulty_value"
         android:layout_width="wrap_content"
@@ -97,7 +98,8 @@
         android:layout_width="wrap_content"
         android:text="@string/single_cache_terrain_name"
         android:textColor="#000000"
-        android:layout_below="@id/single_cache_difficulty_name"/>
+        android:layout_below="@id/single_cache_difficulty_name"
+        android:layout_marginTop="10dp"/>
     <TextView
         android:id="@+id/single_cache_terrain_value"
         android:layout_width="wrap_content"
@@ -113,14 +115,14 @@
         android:layout_width="wrap_content"
         android:text="@string/cache_winter_spinner_name"
         android:textColor="#000000"
-        android:layout_below="@id/single_cache_difficulty_name"
-        android:layout_toRightOf="@id/single_cache_terrain_value"
-        android:layout_alignLeft="@id/single_cache_size_name"/>
+        android:layout_below="@id/single_cache_terrain_name"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"/>
     <TextView
         android:id="@+id/single_cache_winter_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/single_cache_terrain_name"
+        android:layout_alignBaseline="@id/single_cache_winter_name"
         android:layout_toRightOf="@id/single_cache_winter_name"
         android:layout_marginLeft="10dp"/>
 
@@ -130,6 +132,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/single_cache_terrain_name"
+        android:layout_marginTop="10dp"
         />
 
     <Button
@@ -150,5 +153,5 @@
         android:text="@string/single_cache_modify_button_text"
         />
 
-
 </RelativeLayout>
+
