--- a/app/src/main/res/layout/add_remove_cache_layout.xml
+++ b/app/src/main/res/layout/add_remove_cache_layout.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#666666">
     <EditText
         android:id="@+id/cacheName"
         android:textSize="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:hint="@string/cache_name_placeholder"/>
+        android:hint="@string/cache_name_placeholder"
+        android:textColor="@color/DefaultTextColor"
+        />
     <EditText
         android:id="@+id/cacheGc"
         android:textSize="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cacheName"
-        android:hint="@string/cache_gc_placeholder"/>
+        android:hint="@string/cache_gc_placeholder"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/cache_n"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text="N"
         android:layout_marginTop="10dp"
         android:layout_below="@id/cacheGc"/>
@@ -32,6 +36,7 @@
         android:layout_alignBaseline="@id/cache_n"
         android:layout_toRightOf="@id/cache_n"
         android:hint="00"
+        android:textColor="@color/DefaultTextColor"
         android:numeric="integer"
         />
     <TextView
@@ -40,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/cache_latitude_degree"
         android:layout_toRightOf="@id/cache_latitude_degree"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text=""/>
 
     <EditText
@@ -51,13 +56,14 @@
         android:layout_alignBaseline="@id/cache_n"
         android:layout_toRightOf="@id/cache_degree_sign_latitude"
         android:hint="00.0000"
+        android:textColor="@color/DefaultTextColor"
         android:numeric="decimal"/>
 
     <TextView
         android:id="@+id/cache_e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text="E"
         android:layout_marginTop="10dp"
         android:layout_below="@id/cache_n"/>
@@ -66,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16dp"
+        android:textColor="@color/DefaultTextColor"
         android:layout_alignBaseline="@id/cache_e"
         android:layout_toRightOf="@id/cache_e"
         android:hint="00"
@@ -77,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/cache_longitude_degree"
         android:layout_toRightOf="@id/cache_longitude_degree"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text=""/>
 
     <EditText
@@ -88,6 +95,7 @@
         android:layout_alignBaseline="@id/cache_e"
         android:layout_toRightOf="@id/cache_degree_sign_longitude"
         android:hint="00.0000"
+        android:textColor="@color/DefaultTextColor"
         android:numeric="decimal"/>
 
     <Spinner
@@ -95,7 +103,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/cacheName"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/cache_difficulty_spinner_name"
@@ -106,13 +115,15 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:text="@string/cache_difficulty_spinner_name"
+        android:textColor="@color/DefaultTextColor"
         />
     <Spinner
         android:id="@+id/cache_difficulty_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/cache_difficulty_spinner_name"
-        android:layout_toRightOf="@id/cache_difficulty_spinner_name"/>
+        android:layout_toRightOf="@id/cache_difficulty_spinner_name"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/cache_size_spinner_name"
@@ -120,14 +131,16 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/cache_difficulty_spinner"
         android:layout_alignBaseline="@id/cache_difficulty_spinner"
-        android:text="@string/cache_size_spinner_name"/>
+        android:text="@string/cache_size_spinner_name"
+        android:textColor="@color/DefaultTextColor"/>
 
     <Spinner
         android:id="@+id/cache_size_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/cache_size_spinner_name"
-        android:layout_alignBaseline="@id/cache_size_spinner_name" />
+        android:layout_alignBaseline="@id/cache_size_spinner_name"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/cache_terrain_spinner_name"
@@ -136,14 +149,16 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_below="@id/cache_difficulty_spinner_name"
-        android:text="@string/cache_terrain_spinner_name"/>
+        android:text="@string/cache_terrain_spinner_name"
+        android:textColor="@color/DefaultTextColor"/>
     <Spinner
         android:id="@+id/cache_terrain_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/cache_terrain_spinner_name"
         android:layout_alignBaseline="@id/cache_terrain_spinner_name"
-        android:layout_alignLeft="@id/cache_difficulty_spinner"/>
+        android:layout_alignLeft="@id/cache_difficulty_spinner"
+        android:textColor="@color/DefaultTextColor"/>
     />
 
     <TextView
@@ -153,13 +168,15 @@
         android:text="@string/cache_winter_spinner_name"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cache_terrain_spinner_name"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/DefaultTextColor"/>
     <Spinner
         android:id="@+id/cache_winter_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/cache_winter_spinner_name"
-        android:layout_alignBaseline="@id/cache_winter_spinner_name"/>
+        android:layout_alignBaseline="@id/cache_winter_spinner_name"
+        android:textColor="@color/DefaultTextColor"/>
 
     <View
         android:id="@+id/horizontal_divider"
@@ -174,5 +191,6 @@
         android:layout_below="@id/horizontal_divider"
         android:hint="@string/cache_add_note_placeholder"
         android:padding="2px"
+        android:textColor="@color/DefaultTextColor"
         />
 </RelativeLayout>
