--- a/app/src/main/res/layout/fragment_single_cache.xml
+++ b/app/src/main/res/layout/fragment_single_cache.xml
@@ -10,25 +10,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textColor="@color/DefaultTextColor"/>
     <View
         android:id="@+id/single_cache_circle"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignBaseline="@id/single_cache_name"
         android:layout_alignParentRight="true"
+        android:textColor="@color/DefaultTextColor"
         />
     <TextView
         android:id="@+id/single_cacheGc"
         android:textSize="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/single_cache_name"/>
+        android:layout_below="@+id/single_cache_name"
+        android:textColor="@color/DefaultTextColor"/>
     <TextView
         android:id="@+id/single_cache_n"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text="N"
         android:layout_marginTop="10dp"
         android:layout_below="@id/single_cacheGc"/>
@@ -39,12 +42,13 @@
         android:textSize="16dp"
         android:layout_alignBaseline="@id/single_cache_n"
         android:layout_toRightOf="@id/single_cache_n"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"/>
     <TextView
         android:id="@+id/single_cache_e"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:text="E"
         android:layout_marginTop="10dp"
         android:layout_below="@id/single_cache_n"/>
@@ -56,6 +60,7 @@
         android:layout_alignBaseline="@id/single_cache_e"
         android:layout_toRightOf="@id/single_cache_e"
         android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"
         />
 
     <TextView
@@ -63,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/single_cache_difficulty_name"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:layout_below="@id/single_cache_e"
         android:layout_marginTop="10dp"/>
     <TextView
@@ -72,14 +77,15 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/single_cache_difficulty_name"
         android:layout_toRightOf="@id/single_cache_difficulty_name"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/single_cache_size_name"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/cache_size_spinner_name"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:layout_alignBaseline="@id/single_cache_difficulty_name"
         android:layout_toRightOf="@id/single_cache_difficulty_value"
         android:layout_marginLeft="10dp"
@@ -90,14 +96,15 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/single_cache_size_name"
         android:layout_toRightOf="@id/single_cache_size_name"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"/>
 
     <TextView
         android:id="@+id/single_cache_terrain_name"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/single_cache_terrain_name"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:layout_below="@id/single_cache_difficulty_name"
         android:layout_marginTop="10dp"/>
     <TextView
@@ -106,7 +113,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/single_cache_terrain_name"
         android:layout_toRightOf="@id/single_cache_terrain_name"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"/>
 
 
     <TextView
@@ -114,7 +122,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/cache_winter_spinner_name"
-        android:textColor="#000000"
+        android:textColor="@color/DefaultTextColor"
         android:layout_below="@id/single_cache_terrain_name"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"/>
@@ -124,15 +132,17 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/single_cache_winter_name"
         android:layout_toRightOf="@id/single_cache_winter_name"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/DefaultTextColor"/>
 
 
     <TextView
         android:id="@+id/single_cache_note"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/single_cache_terrain_name"
+        android:layout_below="@id/single_cache_winter_name"
         android:layout_marginTop="10dp"
+        android:textColor="@color/DefaultTextColor"
         />
 
     <Button
@@ -142,6 +152,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:text="@string/single_cache_remove_button_text"
+        style="@style/buttonColor"
         />
 
     <Button
@@ -151,6 +162,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/single_cache_modify_button_text"
+        style="@style/buttonColor"
         />
 
 </RelativeLayout>
