--- a/app/src/main/res/layout/listview_item_row.xml
+++ b/app/src/main/res/layout/listview_item_row.xml
@@ -7,22 +7,24 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/key"
-        android:textColor="#000000"
         android:textSize="21dp"
         android:textStyle="bold"
+        android:textColor="#ffffff"
         android:layout_marginTop="20px"
         android:layout_marginBottom="20px"
+        android:layout_marginLeft="40px"
         />
     <View
         android:id="@+id/circle"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="40px"
         />
     <View
         android:layout_below="@+id/key"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="#000000" />
+        style="@style/buttonColor"/>
 </RelativeLayout>
