--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/cacheListView"
-        android:layout_below="@id/horizontal_divider_list">
+        android:layout_below="@id/horizontal_divider_list"
+        android:layout_above="@+id/new_list_item_button">
     </ListView>
 
     <Button
