--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -27,7 +27,9 @@
         android:layout_alignParentLeft="true"
         android:text=""
         android:textColor="#000000"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:padding="10px"
+        android:background="@drawable/button_fill_blue"/>
 
 
 
