--- a/app/src/main/res/layout/fragment_single_cache.xml
+++ b/app/src/main/res/layout/fragment_single_cache.xml
@@ -15,7 +15,7 @@
     <View
         android:id="@+id/upperHorizontalDivider"
         android:layout_width="fill_parent"
-        android:layout_height="5px"
+        android:layout_height="3dp"
         style="@style/buttonColor"
         android:layout_below="@+id/single_cache_name"/>
 
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/DefaultTextColor"
         android:text="E"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/single_cache_n"/>
     <TextView
         android:id="@+id/single_cache_longitude"
@@ -76,8 +76,7 @@
         android:layout_height="wrap_content"
         android:textSize="16dp"
         android:layout_alignBaseline="@id/single_cache_e"
-        android:layout_toRightOf="@id/single_cache_e"
-        android:layout_marginLeft="10dp"
+        android:layout_alignLeft="@id/single_cache_latitude"
         android:textColor="@color/DefaultTextColor"
         android:background="@drawable/button_border_blue"
         android:padding="5dp"
@@ -90,7 +89,7 @@
         android:text="@string/single_cache_difficulty_name"
         android:textColor="@color/DefaultTextColor"
         android:layout_below="@id/single_cache_e"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
     <TextView
         android:id="@+id/single_cache_difficulty_value"
         android:layout_width="wrap_content"
@@ -130,7 +129,7 @@
         android:text="@string/single_cache_terrain_name"
         android:textColor="@color/DefaultTextColor"
         android:layout_below="@id/single_cache_difficulty_name"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
     <TextView
         android:id="@+id/single_cache_terrain_value"
         android:layout_width="wrap_content"
