--- a/app/src/main/res/layout/listview_item_row.xml
+++ b/app/src/main/res/layout/listview_item_row.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="20px"
         android:layout_marginBottom="20px"
         android:layout_marginLeft="40px"
+        android:paddingRight="40dp"
         />
     <View
         android:id="@+id/circle"
